<resources>
    <string name="app_name">G-Track</string>
    <string name="user_name">Korisnik</string>
    <string name="password">Lozinka</string>
    <string name="password_repeat">Ponovi lozinku</string>
    <string name="login">PRIJAVI SE</string>
    <string name="version_name">G-TRACK v1.1</string>
    <string name="account">Napravite nalog</string>
    <string name="labelOznaka">Barcode:Naziv predkolone i kataloski broj</string>
    <string name="labelOpisKolone">Oznaka kolone</string>
    <string name="labelOpisStavkeHint">gp/api i test</string>
    <string name="labelOpisStavke">Opis</string>
    <string name="save">Sačuvaj</string>
    <string name="autor">Autor: Zoran Perčinov\nIT sistemi kvaliteta, 2025</string>
    <string name="Account">Upravljanje korisnicima </string>
    <string name="user_list">Lista korisnika </string>
    <string name="forgot_pass">Zaboravili ste lozinku? </string>
    <string name="mail">Email adresa </string>
    <string name="preview">Prikaži</string>
    <string name="date_label">Datum unosa</string>
    <string name="export_label">Preuzmi</string>
    <string name="log_label">Pregled evidencije</string>
    <string name="send_label">Pošalji</string>
    <string name="brojac">Ukupno: 0</string>



</resources>